# SVF-Java

./: .gitignore  CMakeLists.txt  README.md  envjulius.sh  example.c  example.ll  pom.xml  xcodecmake.sh
src/: CMakeLists.txt  CustomAndersen.cpp  CustomAndersen.h  analysis.cpp  connector.cpp  countLOC.py  detectJNICalls.cpp  detectJNICalls.h  detector2.cpp  extendlattice.cpp  generate_header.sh  jnicall_helper.h  main.cpp  main.h  solver.cpp  svf-ex.cpp  svf-ex.h  svfjava_SVFJava.h  svfjava_interface.cpp  translator.cpp
src/jniheaders/: svfjava_Andersen.h  svfjava_PointsTo.h  svfjava_SVFFunction.h  svfjava_SVFG.h  svfjava_SVFGBuilder.h  svfjava_SVFIR.h  svfjava_SVFIRBuilder.h  svfjava_SVFModule.h  svfjava_SVFValue.h  svfjava_SVFVar.h  svfjava_VFG.h  svfjava_VFGNode.h
src/main/java/svfjava/: Andersen.java  CppReference.java  NodeID.java  PTACallGraph.java  PointsTo.java  SVFAnalysisListener.java  SVFArgument.java  SVFFunction.java  SVFG.java  SVFGBuilder.java  SVFIR.java  SVFIRBuilder.java  SVFJava.java  SVFModule.java  SVFValue.java  SVFVar.java  VFG.java  VFGNode.java
src/mvnbuild/maven-status/maven-compiler-plugin/compile/default-compile/: inputFiles.lst
xl_llvm/: .gitignore  Makefile  native.c
